
Supported platforms
-------------------

New user-visible features
-------------------------

- Enable selection of high precision int64x64_t implementation
  at configure time, for debugging purposes.
- A new LTE MAC downlink scheduling algorithm named Channel and QoS
  Aware (CQA) Scheduler is provided by the new
  ``ns3::CqaFfMacScheduler`` object.
  

Bugs fixed
----------
- Bug 1739 - The endpoint is not deallocated for UDP sockets
- Bug 1786 - os << int64x64_t prints un-normalized fractional values
- Bug 1787 - Runtime error when using AnimationInterface::EnablePacketMetadata() to fetch metadata of CSMA packet
- Bug 1808 - FlowMon relies on IPv4's Identification field to trace packets
- Bug 1821 - Setting an interface to Down state will cause various asserts in IPv6
- Bug 1837 - AODV crashes when using multiple interfaces
- Bug 1838 - FlowMonitorHelper must not be copied.
- Bug 1841 - FlowMonitor fails to install if IPv4 is not installed in the node
- Bug 1846 - IPv6 should send Destination Unreachable if no route is available
- Bug 1852 - cairo-wideint-private.h error cannot find definitions for fixed-width integral types
- Bug 1855 - SixLowPanNetDevice is not correctly indexed

Release 3.19
=============

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.19.tar.bz2

Supported platforms
-------------------
These platforms have been tested; others may work also:
- Fedora Core 20 (32 bit) with g++-4.8.2
- Fedora Core 19 (32/64 bit) with g++-4.8.1
- Ubuntu 13.10 (64 bit) with g++-4.8.1
- Ubuntu 12.04.3 (32/64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Mavericks 10.9 with Xcode 5.0.1 and clang-500.2.79
- OS X Mountain Lion 10.8.5 with Xcode 5 and g++-4.2.1
- FreeBSD 9.2-RELEASE (64 bit) with clang-3.3

New user-visible features
-------------------------
- Extension to UE measurements and improved handover algorithm models in LTE